# ofi-microprice-queue-HFT

./: .gitignore  CMakeLists.txt  LICENSE  README.md  a
.devcontainer/: devcontainer.json
include/common/: Types.hpp
include/strategy/: QueueOfi.hpp
src/: backtest_ofi.cpp  dbn_reader.cpp  main.cpp  optimize_ofi.cpp  smoke.cpp
src/strategy/: QueueOfi.cpp
src/tools/: id_counts.cpp  instrument_probe.cpp
tools/: dbn_to_csv_oct2023.py
